--- a/mysite/templates/menu.html
+++ b/mysite/templates/menu.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         {% for food in foods %}
+        <h3>第{{ forloop.counter }}道食物</h3>
         <ul>
             <li> 食物的名字是:{{ food.name }} </li>
             <li> 食物的價格是:{{ food.price }} </li>
