--- a/mysite/restaurants/templates/comments.html
+++ b/mysite/restaurants/templates/comments.html
@@ -61,6 +61,9 @@
                 {% endif %}
 
                 <br /><br />
+                {% if error %}
+                <p style="color:red;">* 表單輸入不完整，請重新輸入</p>
+                {% endif %}
 
                 <form action="" method="post" class="form-horizontal" role="form" style="width:33%; margin:auto; text-align:left">{% csrf_token %}
                     <div class="form-group">
