Module_11 - 表單模型化並修改頁面輸出方式
1. 建立表單模型，並在視圖中匯入
2. 在模版中使用表單方法呈現表單

--- a/mysite/restaurants/templates/comments.html
+++ b/mysite/restaurants/templates/comments.html
@@ -66,18 +66,9 @@
                 {% endfor %}
 
                 <form action="" method="post" class="form-horizontal" role="form" style="width:33%; margin:auto; text-align:left">{% csrf_token %}
-                    <div class="form-group">
-                    <label for="visitor">留言者:</label>
-                    <input id="visitor" type="text" name="visitor" value="{{visitor}}" class="form-control">
-                    </div>
-                    <div class="form-group">
-                    <label for="email">電子信箱:</label>
-                    <input id="email" type="text" name="email" value="{{email}}"class="form-control">
-                    </div>
-                    <div class="form-group">
-                    <label for="content">評價:</label>
-                    <textarea id="content" rows="10" cols="48" name="content" class="form-control">{{content}}</textarea>
-                    </div>
+                    <table>
+                    {{f.as_table}}
+                    </table>
                     <input type="submit" value="給予評價" class="btn btn-default">
                 </form>
             </div>
