Module_11 - 欄位個別輸出與表單樣式客製化

--- a/mysite/restaurants/templates/comments.html
+++ b/mysite/restaurants/templates/comments.html
@@ -71,9 +71,21 @@
                 {% endif %}
 
                 <form action="" method="post" class="form-horizontal" role="form" style="width:33%; margin:auto; text-align:left">{% csrf_token %}
-                    <table>
-                    {{f.as_table}}
-                    </table>
+                    <div class="form-group">
+                    <label for="visitor">留言者:</label>
+                    {{ f.visitor }}
+                    {{ f.visitor.errors }}
+                    </div>
+                    <div class="form-group">
+                        <label for="email">電子信箱:</label>
+                    {{ f.email }}
+                    {{ f.email.errors }}
+                    </div>
+                    <div class="form-group">
+                    <label for="content">評價:</label>
+                    {{ f.content }}
+                    {{ f.content.errors }}
+                    </div>
                     <input type="submit" value="給予評價" class="btn btn-default">
                 </form>
             </div>
