Module_14 - 匿名用戶 vs. 具名用戶
1. 在視圖函式加上login_required裝飾器，將未登入使用者導至登入頁
2. 在模版中加入指示登入後導回原本頁面的{{ next }}

--- a/mysite/templates/registration/login.html
+++ b/mysite/templates/registration/login.html
@@ -43,6 +43,7 @@
                     <table>
                         {{ form.as_table }}
                     </table>
+                    <input type="hidden" name="next" value="{{ next }}">
                     <input type="submit" value="登入" class="btn btn-default">
                 </form>
             </div>
