--- a/mysite/templates/register.html
+++ b/mysite/templates/register.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title> Restaurant King </title>
+        <title> Register </title>
         <meta charset='utf-8'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
@@ -39,17 +39,10 @@
 
         <div class="container">
             <div class="center_padding">
-                <h2>歡迎來到餐廳王</h2>
-                {% if request.user.is_authenticated %}
-                <p>
-                    {{request.user}} 您已經登入囉
-                    <a href="/accounts/logout/">登出</a>
-                </p>
-                <a href="/restaurants_list/">餐廳列表</a>
-                {% else %}
-                <p>您尚未登入喔~<a href="/accounts/login/">登入</a></p>
-                {% endif %}
-                <p> 若您還沒有帳號，請<a href='/accounts/register/'>註冊</a></p>
+                <form action="" method="post" class="form-default" style="text-align:left">{% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="註冊" class="btn btn-default">
+                </form>
             </div>
         </div>
 
