--- a/mysite/restaurants/templates/comments.html
+++ b/mysite/restaurants/templates/comments.html
@@ -1,97 +1,52 @@
-<!doctype html>
-<html>
-    <head>
-        <title> Comment </title>
-        <meta charset='utf-8'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-        <style>
-        th { text-align: center; }
-        div.center_padding {
-            text-align: center;
-            padding: 128px 15px;
-        }
-        .errorlist {
-            color: red;
-        }
+{% extends "base.html" %}
 
-        </style>
-    </head>
-    <body>
+{% block title %} Comment {% endblock %}
 
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">MySite</a>
-                </div>
-                <!--div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div--><!--/.nav-collapse -->
+{% block content %}
+        <h2>{{ r.name }}的評價</h2>
+        {% if r.comment_set.all %}
+        <p>目前共有{{ r.comment_set.all|length }}條評價</p>
+        <table class="table table-hover">
+            <tr>
+                <th>留言者</th>
+                <th>時間</th>
+                <th>評價</th>
+            </tr>
+            {% for c in r.comment_set.all %}
+            <tr>
+                <td> {{ c.visitor }} </td>
+                <td> {{ c.date_time | date:"F j, Y" }} </td>
+                <td> {{ c.content }} </td>
+            </tr>
+            {% endfor %}
+        </table>
+        {% else %}
+        <p>無評價</p>
+        {% endif %}
+
+        <br /><br />
+        {% if f.errors %}
+        <p style="color:red;">
+            請依提示修復表單錯誤
+        </p>
+        {% endif %}
+
+        <form action="" method="post" class="form-horizontal" role="form" style="width:33%; margin:auto; text-align:left">{% csrf_token %}
+            <div class="form-group">
+            <label for="visitor">留言者:</label>
+            {{ f.visitor }}
+            {{ f.visitor.errors }}
             </div>
-        </nav>
-
-        <div class="container">
-            <div class="center_padding">
-                <h2>{{ r.name }}的評價</h2>
-                {% if r.comment_set.all %}
-                <p>目前共有{{ r.comment_set.all|length }}條評價</p>
-                <table class="table table-hover">
-                    <tr>
-                        <th>留言者</th>
-                        <th>時間</th>
-                        <th>評價</th>
-                    </tr>
-                    {% for c in r.comment_set.all %}
-                    <tr>
-                        <td> {{ c.visitor }} </td>
-                        <td> {{ c.date_time | date:"F j, Y" }} </td>
-                        <td> {{ c.content }} </td>
-                    </tr>
-                    {% endfor %}
-                </table>
-                {% else %}
-                <p>無評價</p>
-                {% endif %}
-
-                <br /><br />
-                {% if f.errors %}
-                <p style="color:red;">
-                    請依提示修復表單錯誤
-                </p>
-                {% endif %}
-
-                <form action="" method="post" class="form-horizontal" role="form" style="width:33%; margin:auto; text-align:left">{% csrf_token %}
-                    <div class="form-group">
-                    <label for="visitor">留言者:</label>
-                    {{ f.visitor }}
-                    {{ f.visitor.errors }}
-                    </div>
-                    <div class="form-group">
-                        <label for="email">電子信箱:</label>
-                    {{ f.email }}
-                    {{ f.email.errors }}
-                    </div>
-                    <div class="form-group">
-                    <label for="content">評價:</label>
-                    {{ f.content }}
-                    {{ f.content.errors }}
-                    </div>
-                    <input type="submit" value="給予評價" class="btn btn-default">
-                </form>
+            <div class="form-group">
+                <label for="email">電子信箱:</label>
+            {{ f.email }}
+            {{ f.email.errors }}
             </div>
-        </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    </body>
-</html>
+            <div class="form-group">
+            <label for="content">評價:</label>
+            {{ f.content }}
+            {{ f.content.errors }}
+            </div>
+            <input type="submit" value="給予評價" class="btn btn-default">
+        </form>
+{% endblock %}
