--- a/mysite/restaurants/templates/menu.html
+++ b/mysite/restaurants/templates/menu.html
@@ -1,71 +1,28 @@
-<!doctype html>
-<html>
-    <head>
-        <title> Menu </title>
-        <meta charset='utf-8'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-        <style>
-        th { text-align: center; }
-        div.center_padding {
-            text-align: center;
-            padding: 128px 15px;
-        }
+{% extends "base.html" %}
 
-        </style>
-    </head>
-    <body>
+{% block title %} Menu {% endblock %}
 
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">MySite</a>
-                </div>
-                <!--div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div--><!--/.nav-collapse -->
-            </div>
-        </nav>
-
-        <div class="container">
-            <div class="center_padding">
-                <h2>{{ restaurant.name }}的Menu</h2>
-                {% if restaurant.food_set.all %}
-                <p>本餐廳共有{{ restaurant.food_set.all|length }}道菜</p>
-                <table class="table table-hover">
-                    <tr>
-                        <th>菜名</th>
-                        <th>價格</th>
-                        <th>註解</th>
-                        <th>辣不辣</th>
-                    </tr>
-                    {% for food in restaurant.food_set.all %}
-                    <tr>
-                        <td> {{ food.name }} </td>
-                        <td> {{ food.price }} </td>
-                        <td> {{ food.comment }} </td>
-                        <td> {% if food.is_spicy %} 辣 {% else %} 不辣 {% endif %} </td>
-                    </tr>
-                    {% endfor %}
-                </table>
-                {% else %}
-                <p>本餐廳啥都沒賣</p>
-                {% endif %}
-
-            </div>
-        </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    </body>
-</html>
+{% block content %}
+    <h2>{{ restaurant.name }}的Menu</h2>
+    {% if restaurant.food_set.all %}
+    <p>本餐廳共有{{ restaurant.food_set.all|length }}道菜</p>
+    <table class="table table-hover">
+        <tr>
+            <th>菜名</th>
+            <th>價格</th>
+            <th>註解</th>
+            <th>辣不辣</th>
+        </tr>
+        {% for food in restaurant.food_set.all %}
+        <tr>
+            <td> {{ food.name }} </td>
+            <td> {{ food.price }} </td>
+            <td> {{ food.comment }} </td>
+            <td> {% if food.is_spicy %} 辣 {% else %} 不辣 {% endif %} </td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% else %}
+    <p>本餐廳啥都沒賣</p>
+    {% endif %}
+{% endblock %}
