--- a/mysite/restaurants/templates/restaurants_list.html
+++ b/mysite/restaurants/templates/restaurants_list.html
@@ -1,70 +1,28 @@
-<!doctype html>
-<html>
-    <head>
-        <title> Restaurants </title>
-        <meta charset='utf-8'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-        <style>
-        th { text-align: center; }
-        div.center_padding {
-            text-align: center;
-            padding: 128px 15px;
-        }
+{% extends "base.html" %}
 
-        </style>
-    </head>
-    <body>
+{% block title %} Restaurants {% endblock %}
 
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">MySite</a>
-                </div>
-                <!--div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div--><!--/.nav-collapse -->
-            </div>
-        </nav>
-
-        <div class="container">
-            <div class="center_padding">
-                <h2>餐廳列表</h2>
-                <form action="/menu/" method="get">
-                <table class="table table-hover">
-                    <tr>
-                        <th>選取</th>
-                        <th>店名</th>
-                        <th>電話</th>
-                        <th>地址</th>
-                        <th>評價</th>
-                    </tr>
-                    {% for r in restaurants %}
-                    <tr>
-                         <td> <input type="radio" name="id" value="{{r.id}}"> </td>
-                        <td> {{ r.name }} </td>
-                        <td> {{ r.phone_number }} </td>
-                        <td> {{ r.address }} </td>
-                        <td> <a href="/comment/{{r.id}}/"> 評價 </a> </td> 
-                    </tr>
-                    {% endfor %}
-                </table>
-                <input type="submit" value="觀看menu" class="btn btn-default">
-                </form>
-            </div>
-        </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    </body>
-</html>
+{% block content %}
+        <h2>餐廳列表</h2>
+        <form action="/menu/" method="get">
+        <table class="table table-hover">
+            <tr>
+                <th>選取</th>
+                <th>店名</th>
+                <th>電話</th>
+                <th>地址</th>
+                <th>評價</th>
+            </tr>
+            {% for r in restaurants %}
+            <tr>
+                 <td> <input type="radio" name="id" value="{{r.id}}"> </td>
+                <td> {{ r.name }} </td>
+                <td> {{ r.phone_number }} </td>
+                <td> {{ r.address }} </td>
+                <td> <a href="/comment/{{r.id}}/"> 評價 </a> </td> 
+            </tr>
+            {% endfor %}
+        </table>
+        <input type="submit" value="觀看menu" class="btn btn-default">
+        </form>
+{% endblock %}
