--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -1,59 +1,13 @@
-<!doctype html>
-<html>
-    <head>
-        <title> Restaurant King </title>
-        <meta charset='utf-8'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-        <style>
-        th { text-align: center; }
-        div.center_padding {
-            text-align: center;
-            padding: 128px 15px;
-        }
+{% extends "base.html" %}
 
-        </style>
-    </head>
-    <body>
+{% block title %} 首頁 {% endblock %}
 
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">MySite</a>
-                </div>
-                <!--div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div--><!--/.nav-collapse -->
-            </div>
-        </nav>
-
-        <div class="container">
-            <div class="center_padding">
-                <h2>歡迎來到餐廳王</h2>
-                {% if request.user.is_authenticated %}
-                <p>
-                    {{request.user}} 您已經登入囉
-                    <a href="/accounts/logout/">登出</a>
-                </p>
-                <a href="/restaurants_list/">餐廳列表</a>
-                {% else %}
-                <p>您尚未登入喔~<a href="/accounts/login/">登入</a></p>
-                {% endif %}
-                <p> 若您還沒有帳號，請<a href='/accounts/register/'>註冊</a></p>
-            </div>
-        </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    </body>
-</html>
+{% block content %}
+    <h2>歡迎來到餐廳王</h2>
+    {% if request.user.is_authenticated %}
+    <a href="/restaurants_list/">餐廳列表</a>
+    {% else %}
+    <p>您尚未登入喔~<a href="/accounts/login/">登入</a></p>
+    <p> 若您還沒有帳號，請<a href='/accounts/register/'>註冊</a></p>
+    {% endif %}
+{% endblock %}
