Module_15 - 自定義過濾器
1. 自定義yes_no過濾器
2. 在html中載入使用

--- a/mysite/restaurants/templates/menu.html
+++ b/mysite/restaurants/templates/menu.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load myfilters %}
 
 {% block title %} Menu {% endblock %}
 
@@ -18,7 +19,7 @@
             <td> {{ food.name }} </td>
             <td> {{ food.price }} </td>
             <td> {{ food.comment }} </td>
-            <td> {% if food.is_spicy %} 辣 {% else %} 不辣 {% endif %} </td>
+            <td> {{ food.is_spicy|yes_no:"辣/不辣" }} </td>
         </tr>
         {% endfor %}
     </table>
